# BiaEngine

./: .gitignore  CMakeLists.txt  NewCppClass.cpp  NewCppClass.h  README.md  TestGame.cpp  TestGame.h  install.sh  main.cpp
core/game/: BiaGame.cpp  BiaGame.h  GameState.cpp  GameState.h
core/graphics/: Shader.cpp  Shader.h  Window.cpp  Window.h
core/math/: mat4.cpp  mat4.h  maths.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
core/shaders/: basic.frag
core/shapes/: Rectangle2f.cpp  Rectangle2f.h  Triangle2f.cpp  Triangle2f.h
core/util/: Logger.h  fileutil.h  logger.h
